--- a/admin.html
+++ b/admin.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anonomoose Admin Dashboard</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; img-src 'self' data: https://raw.githubusercontent.com https://cdnjs.cloudflare.com; connect-src 'self' wss://signaling-server-zc6m.onrender.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net 'sha256-5OWkiZ6vKs+ILJhuMP83x2kY08mNVeuoGmRejQnuJ0E='; style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; img-src 'self' data: https://raw.githubusercontent.com https://cdnjs.cloudflare.com; connect-src 'self' wss://signaling-server-zc6m.onrender.com;">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" integrity="sha512-wnea99uKIC3TJF7v4eKk4Y+lMz2Mklv18+r4na2Gn1abDRPPOeef95xTzdwGD9e6zXJBteMIhZ1+68QC5byJZw==" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/72x72/1f60e.png"/>
     <style>
@@ -29,26 +28,31 @@
             max-width: 500px;
             width: 100%;
         }
-        #stats {
-            margin-top: 20px;
+        #statsDisplay {
+            margin-top: 1rem;
             text-align: left;
+            font-size: 1rem;
+            color: #333;
+        }
+        #statsDisplay p {
+            margin: 0.5rem 0;
         }
         #errorMessage {
-            color: #e53e3e;
+            font-size: 1.2rem;
             font-weight: bold;
-            margin-top: 10px;
+            color: #e53e3e;
+            margin: 1rem 0;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Anonomoose Admin Dashboard</h1>
-        <div id="status" class="text-center mb-4 text-gray-600">Enter admin secret to view stats</div>
-        <input id="secretInput" type="password" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter admin secret" aria-describedby="secretHelp">
-        <div id="secretHelp" class="text-sm text-gray-600 mb-2">Enter the admin secret key</div>
-        <button id="submitButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-blue-600 transition-colors" aria-label="Submit admin secret">Submit</button>
-        <div id="stats" class="text-gray-800"></div>
-        <div id="errorMessage" class="hidden"></div>
+        <div id="status" class="text-center mb-4 text-gray-600">Enter admin password to view stats</div>
+        <input id="adminPassword" type="password" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter admin password" aria-describedby="passwordHelp">
+        <div id="passwordHelp" class="text-sm text-gray-600 mb-2">Enter the ADMIN_SECRET from your server</div>
+        <button id="submitButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-blue-600 transition-colors" aria-label="Submit admin password">Submit</button>
+        <div id="statsDisplay" class="hidden"></div>
         <div class="text-center mt-4">
             <a href="https://anonomoose.com/index.html" class="text-blue-500 hover:underline">Back to Chat</a>
         </div>
@@ -56,72 +60,107 @@
     <script>
         const socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
         const statusElement = document.getElementById('status');
-        const secretInput = document.getElementById('secretInput');
+        const adminPasswordInput = document.getElementById('adminPassword');
         const submitButton = document.getElementById('submitButton');
-        const statsElement = document.getElementById('stats');
-        const errorMessageElement = document.getElementById('errorMessage');
+        const statsDisplay = document.getElementById('statsDisplay');
+        let clientId = Math.random().toString(36).substr(2, 9);
+        let token = '';
+
+        if (localStorage.getItem('clientId')) {
+            clientId = localStorage.getItem('clientId');
+        } else {
+            localStorage.setItem('clientId', clientId);
+        }
+
+        function fetchStats() {
+            const secret = adminPasswordInput.value.trim();
+            if (!secret) {
+                statusElement.textContent = 'Please enter the admin password.';
+                adminPasswordInput.focus();
+                return;
+            }
+            if (socket.readyState === WebSocket.OPEN && token) {
+                statusElement.textContent = 'Fetching server stats...';
+                socket.send(JSON.stringify({ type: 'get-stats', secret, clientId, token }));
+            } else {
+                statusElement.textContent = 'Connecting to server...';
+            }
+        }
 
         socket.onopen = () => {
             console.log('Admin page WebSocket opened');
-            statusElement.textContent = 'Enter admin secret to view stats';
+            socket.send(JSON.stringify({ type: 'connect', clientId }));
         };
 
         socket.onmessage = (event) => {
             console.log('Received message:', event.data);
             try {
                 const data = JSON.parse(event.data);
-                if (data.type === 'stats') {
-                    statusElement.textContent = 'Stats retrieved successfully';
-                    statsElement.innerHTML = `
-                        <p><strong>Daily Unique Users:</strong> ${data.dailyUsers}</p>
-                        <p><strong>Daily WebRTC Connections:</strong> ${data.dailyConnections}</p>
-                        <p><strong>All-Time Unique Users:</strong> ${data.allTimeUsers}</p>
-                        <p><strong>Active Rooms:</strong> ${data.activeRooms}</p>
-                        <p><strong>Total Clients:</strong> ${data.totalClients}</p>
-                    `;
-                    errorMessageElement.classList.add('hidden');
+                if (data.type === 'connected') {
+                    token = data.accessToken;
+                    console.log('Received token:', token);
+                    statusElement.textContent = 'Connected. Enter admin password to view stats.';
+                    adminPasswordInput.focus();
+                } else if (data.type === 'stats') {
+                    statsDisplay.innerHTML = '';
+                    statsDisplay.classList.remove('hidden');
+                    statusElement.textContent = 'Server stats retrieved.';
+                    const stats = [
+                        `Daily Users: ${data.dailyUsers}`,
+                        `Daily Connections: ${data.dailyConnections}`,
+                        `All-Time Users: ${data.allTimeUsers}`,
+                        `Active Rooms: ${data.activeRooms}`,
+                        `Total Clients: ${data.totalClients}`
+                    ];
+                    stats.forEach(stat => {
+                        const p = document.createElement('p');
+                        p.textContent = stat;
+                        statsDisplay.appendChild(p);
+                    });
                 } else if (data.type === 'error') {
-                    errorMessageElement.textContent = data.message;
-                    errorMessageElement.classList.remove('hidden');
-                    statusElement.textContent = 'Error retrieving stats';
+                    statsDisplay.innerHTML = '';
+                    statsDisplay.classList.add('hidden');
+                    statusElement.textContent = data.message || 'Error fetching stats. Please try again.';
+                    console.error('Server error:', data.message);
+                    if (data.message.includes('Invalid or expired token')) {
+                        socket.send(JSON.stringify({ type: 'connect', clientId }));
+                    } else if (data.message.includes('Invalid admin secret')) {
+                        adminPasswordInput.value = '';
+                        adminPasswordInput.focus();
+                    }
                 }
             } catch (error) {
                 console.error('Error parsing message:', error);
-                statusElement.textContent = 'Error processing stats';
-                errorMessageElement.textContent = 'Invalid server response';
-                errorMessageElement.classList.remove('hidden');
+                statusElement.textContent = 'Error fetching stats. Please try again.';
+                statsDisplay.classList.add('hidden');
             }
         };
 
         socket.onerror = (error) => {
             console.error('WebSocket error:', error);
             statusElement.textContent = 'Connection error. Please try again.';
-            errorMessageElement.textContent = 'WebSocket connection failed';
-            errorMessageElement.classList.remove('hidden');
+            statsDisplay.classList.add('hidden');
         };
 
         socket.onclose = () => {
             console.log('WebSocket closed');
             statusElement.textContent = 'Disconnected. Reconnecting...';
-            errorMessageElement.textContent = 'WebSocket connection closed';
-            errorMessageElement.classList.remove('hidden');
+            statsDisplay.classList.add('hidden');
             setTimeout(() => {
                 window.location.reload();
             }, 5000);
         };
 
         submitButton.onclick = () => {
-            const secret = secretInput.value.trim();
-            if (secret) {
-                socket.send(JSON.stringify({ type: 'get-stats', secret }));
-                statusElement.textContent = 'Fetching stats...';
-                secretInput.value = '';
-            } else {
-                errorMessageElement.textContent = 'Please enter a valid admin secret';
-                errorMessageElement.classList.remove('hidden');
-                statusElement.textContent = 'Enter admin secret to view stats';
-            }
+            fetchStats();
         };
+
+        adminPasswordInput.addEventListener('keydown', (event) => {
+            if (event.key === 'Enter') {
+                event.preventDefault();
+                fetchStats();
+            }
+        });
     </script>
 </body>
 </html>
