--- a/admin.html
+++ b/admin.html
@@ -101,7 +101,8 @@
     const featuresContainer = document.getElementById('featuresContainer');
     let clientId = Math.random().toString(36).substr(2, 9);
     let token = '';
-    let reconnectAttempts = 0; // New: Track reconnect attempts
+    let reconnectAttempts = 0;
+    const maxReconnectAttempts = 5; // New: Limit reconnect attempts
 
     if (localStorage.getItem('clientId')) {
       clientId = localStorage.getItem('clientId');
@@ -136,7 +137,6 @@
 
     function toggleFeature(feature) {
       const secret = adminPasswordInput.value.trim();
-      // New: Add confirmation for service toggle
       if (feature === 'service' && !confirm('Toggling the service will disconnect all users. Continue?')) {
         return;
       }
@@ -146,7 +146,7 @@
     socket.onopen = () => {
       console.log('Admin page WebSocket opened');
       socket.send(JSON.stringify({ type: 'connect', clientId }));
-      reconnectAttempts = 0; // Reset on successful connection
+      reconnectAttempts = 0;
       statusElement.textContent = 'Connected. Enter admin password to view stats.';
       adminPasswordInput.focus();
     };
@@ -184,21 +184,30 @@
           document.getElementById('toggleImages').classList.toggle('off', !data.enableImages);
           document.getElementById('toggleVoice').textContent = data.enableVoice ? 'On' : 'Off';
           document.getElementById('toggleVoice').classList.toggle('off', !data.enableVoice);
-          // New: Show service disabled status
           if (!data.enableService) {
             statusElement.textContent = 'Service is disabled. Toggle to re-enable.';
           }
         } else if (data.type === 'feature-toggled') {
-          // Update button states after toggle
           const button = document.getElementById(`toggle${data.feature.charAt(0).toUpperCase() + data.feature.slice(1)}`);
           button.textContent = data.enabled ? 'On' : 'Off';
           button.classList.toggle('off', !data.enabled);
           showStatusMessage(`Feature ${data.feature} toggled to ${data.enabled ? 'On' : 'Off'}`);
-          // New: Update status if service toggled
           if (data.feature === 'service' && !data.enabled) {
             statusElement.textContent = 'Service is disabled. Toggle to re-enable.';
           } else if (data.feature === 'service' && data.enabled) {
             statusElement.textContent = 'Server stats retrieved.';
+          }
+        } else if (data.type === 'features-update') {
+          // New: Handle features-update to keep UI in sync
+          document.getElementById('toggleService').textContent = data.enableService ? 'On' : 'Off';
+          document.getElementById('toggleService').classList.toggle('off', !data.enableService);
+          document.getElementById('toggleImages').textContent = data.enableImages ? 'On' : 'Off';
+          document.getElementById('toggleImages').classList.toggle('off', !data.enableImages);
+          document.getElementById('toggleVoice').textContent = data.enableVoice ? 'On' : 'Off';
+          document.getElementById('toggleVoice').classList.toggle('off', !data.enableVoice);
+          showStatusMessage(`Features updated: ${data.enableService ? 'Service enabled' : 'Service disabled'}`);
+          if (!data.enableService) {
+            statusElement.textContent = 'Service is disabled. Toggle to re-enable.';
           }
         } else if (data.type === 'error') {
           statsDisplay.innerHTML = '';
@@ -211,6 +220,16 @@
           } else if (data.message.includes('Invalid admin secret')) {
             adminPasswordInput.value = '';
             adminPasswordInput.focus();
+          } else if (data.message.includes('Token revoked') || data.message.includes('Invalid or expired refresh token')) {
+            showStatusMessage('Session expired. Reconnecting...');
+            socket.close();
+          } else if (data.message.includes('Rate limit exceeded')) {
+            showStatusMessage('Rate limit exceeded. Waiting before retrying...');
+            setTimeout(() => {
+              if (reconnectAttempts < maxReconnectAttempts) {
+                socket.send(JSON.stringify({ type: 'connect', clientId }));
+              }
+            }, 60000);
           }
         }
       } catch (error) {
@@ -233,7 +252,10 @@
       showStatusMessage('Disconnected. Reconnecting...');
       statsDisplay.classList.add('hidden');
       featuresContainer.classList.add('hidden');
-      // New: Implement exponential backoff for reconnect
+      if (reconnectAttempts >= maxReconnectAttempts) {
+        showStatusMessage('Max reconnect attempts reached. Please refresh the page.', 10000);
+        return;
+      }
       const delay = Math.min(30000, 5000 * Math.pow(2, reconnectAttempts));
       reconnectAttempts++;
       setTimeout(() => {
