--- a/admin.html
+++ b/admin.html
@@ -4,303 +4,161 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anonomoose Admin Dashboard</title>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net 'sha256-Y1TIKkgSRfJV93DiNIcBtVpWORddCUsMwTwmOdVcFIo='; style-src 'self' https://cdn.jsdelivr.net 'nonce-randomNonce123'; img-src 'self' data: https://raw.githubusercontent.com https://cdnjs.cloudflare.com; connect-src 'self' wss://signaling-server-zc6m.onrender.com;">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" integrity="sha512-wnea99uKIC3TJF7v4eKk4Y+lMz2Mklv18+r4na2Gn1abDRPPOeef95xTzdwGD9e6zXJBteMIhZ1+68QC5byJZw==" crossorigin="anonymous">
-  <link rel="icon" type="image/png" href="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/72x72/1f60e.png"/>
-  <style nonce="randomNonce123">
+  <style>
     body {
-      background-color: #000;
-      color: #fff;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0;
-      padding-top: 140px;
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f4f4f4;
     }
     .container {
-      text-align: center;
+      max-width: 600px;
+      margin: 0 auto;
+      background: white;
       padding: 20px;
-      background-color: #fff;
-      color: #000;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-      max-width: 500px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      text-align: center;
+    }
+    .input-group {
+      margin-bottom: 15px;
+    }
+    label {
+      display: block;
+      margin-bottom: 5px;
+    }
+    input {
       width: 100%;
+      padding: 8px;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 4px;
     }
-    #statsDisplay {
-      margin-top: 1rem;
-      text-align: left;
-      font-size: 1rem;
-      color: #333;
-    }
-    #statsDisplay p {
-      margin: 0.5rem 0;
-    }
-    #errorMessage {
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: #e53e3e;
-      margin: 1rem 0;
-    }
-    #featuresContainer {
-      margin-top: 2rem;
-      text-align: left;
-    }
-    .feature-toggle {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 1rem;
-    }
-    .feature-toggle button {
-      background-color: #10b981;
+    button {
+      padding: 10px 20px;
+      background-color: #007bff;
       color: white;
-      padding: 0.5rem 1rem;
-      border-radius: 0.5rem;
+      border: none;
+      border-radius: 4px;
       cursor: pointer;
+      margin-right: 10px;
     }
-    .feature-toggle button.off {
-      background-color: #ef4444;
+    button:hover {
+      background-color: #0056b3;
+    }
+    #stats, #features {
+      margin-top: 20px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    #qrCode {
+      margin-top: 20px;
+      text-align: center;
+    }
+    #qrCode img {
+      max-width: 200px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Anonomoose Admin Dashboard</h1>
-    <div id="status" class="text-center mb-4 text-gray-600">Enter admin password to view stats</div>
-    <input id="adminPassword" type="password" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter admin password" aria-describedby="passwordHelp">
-    <div id="passwordHelp" class="text-sm text-gray-600 mb-2">Enter the ADMIN_SECRET from your server</div>
-    <button id="submitButton" class="bg-blue-500 text-white px-4 py-2 rounded w-full mb-4 hover:bg-blue-600 transition-colors" aria-label="Submit admin password">Submit</button>
-    <div id="statsDisplay" class="hidden"></div>
-    <div id="featuresContainer" class="hidden">
-      <h2 class="text-xl font-bold mb-4">Feature Toggles</h2>
-      <div class="feature-toggle">
-        <span>Service Enabled</span>
-        <button id="toggleService" aria-label="Toggle service">Loading...</button>
-      </div>
-      <div class="feature-toggle">
-        <span>Image Messages</span>
-        <button id="toggleImages" aria-label="Toggle image messages">Loading...</button>
-      </div>
-      <div class="feature-toggle">
-        <span>Voice Messages</span>
-        <button id="toggleVoice" aria-label="Toggle voice messages">Loading...</button>
-      </div>
+    <h1>Anonomoose Admin Dashboard</h1>
+    <div class="input-group">
+      <label for="adminSecret">Admin Secret</label>
+      <input type="password" id="adminSecret" placeholder="Enter admin secret">
     </div>
-    <div class="text-center mt-4">
-      <a href="https://anonomoose.com/index.html" class="text-blue-500 hover:underline">Back to Chat</a>
+    <div class="input-group">
+      <label for="totpCode">TOTP Code</label>
+      <input type="text" id="totpCode" placeholder="Enter TOTP code from authenticator app">
     </div>
+    <button onclick="getStats()">Get Stats</button>
+    <button onclick="getFeatures()">Get Features</button>
+    <div id="stats"></div>
+    <div id="features"></div>
+    <div id="qrCode"></div>
   </div>
   <script>
-    let socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
-    const statusElement = document.getElementById('status');
-    const adminPasswordInput = document.getElementById('adminPassword');
-    const submitButton = document.getElementById('submitButton');
-    const statsDisplay = document.getElementById('statsDisplay');
-    const featuresContainer = document.getElementById('featuresContainer');
-    let clientId = Math.random().toString(36).substr(2, 9);
-    let token = '';
-    let reconnectAttempts = 0;
-    const maxReconnectAttempts = 5;
-    let lastToggleTime = 0;
-
-    if (localStorage.getItem('clientId')) {
-      clientId = localStorage.getItem('clientId');
-    } else {
-      localStorage.setItem('clientId', clientId);
-    }
-
-    function showStatusMessage(message, duration = 3000) {
-      statusElement.textContent = message;
-      statusElement.setAttribute('aria-live', 'assertive');
-      setTimeout(() => {
-        statusElement.textContent = 'Enter admin password to view stats';
-        statusElement.setAttribute('aria-live', 'polite');
-      }, duration);
-    }
-
-    function fetchStatsAndFeatures() {
-      const secret = adminPasswordInput.value.trim();
-      if (!secret) {
-        showStatusMessage('Please enter the admin password.');
-        adminPasswordInput.focus();
-        return;
-      }
-      if (socket.readyState === WebSocket.OPEN && token) {
-        statusElement.textContent = 'Fetching server stats and features...';
-        socket.send(JSON.stringify({ type: 'get-stats', secret, clientId, token }));
-        socket.send(JSON.stringify({ type: 'get-features', secret, clientId, token }));
-      } else {
-        showStatusMessage('Connecting to server...');
-      }
-    }
-
-    function toggleFeature(feature) {
-      const now = Date.now();
-      if (now - lastToggleTime < 1000) {
-        showStatusMessage('Please wait before toggling again.', 2000);
-        return;
-      }
-      lastToggleTime = now;
-      const secret = adminPasswordInput.value.trim();
-      if (feature === 'service' && !confirm('Toggling the service will disconnect all users. Continue?')) {
-        return;
-      }
-      if (socket.readyState === WebSocket.OPEN) {
-        socket.send(JSON.stringify({ type: 'toggle-feature', feature, secret, clientId, token }));
-      } else {
-        showStatusMessage('Connection closed. Reconnecting to toggle...');
-      }
-    }
-
-    socket.onopen = () => {
-      console.log('Admin page WebSocket opened');
-      if (socket.readyState === WebSocket.OPEN) {
-        socket.send(JSON.stringify({ type: 'connect', clientId }));
-      }
-      reconnectAttempts = 0;
-      statusElement.textContent = 'Connected. Enter admin password to view stats.';
-      adminPasswordInput.focus();
+    const ws = new WebSocket('wss://signaling-server-zc6m.onrender.com');
+    ws.onopen = () => {
+      console.log('WebSocket opened for admin');
+      // Fetch TOTP secret QR code
+      fetch('/totp-secret')
+        .then(response => response.json())
+        .then(data => {
+          if (data.qrCode) {
+            const qrCodeDiv = document.getElementById('qrCode');
+            qrCodeDiv.innerHTML = `<p>Scan this QR code with your authenticator app:</p><img src="${data.qrCode}" alt="TOTP QR Code">`;
+          } else {
+            console.error('Failed to fetch TOTP QR code:', data.error);
+          }
+        })
+        .catch(error => console.error('Error fetching TOTP secret:', error));
     };
-
-    socket.onmessage = (event) => {
-      console.log('Received message:', event.data);
-      try {
-        const data = JSON.parse(event.data);
-        if (data.type === 'connected') {
-          token = data.accessToken;
-          console.log('Received token:', token);
-          statusElement.textContent = 'Connected. Enter admin password to view stats.';
-          adminPasswordInput.focus();
-        } else if (data.type === 'stats') {
-          statsDisplay.innerHTML = '';
-          statsDisplay.classList.remove('hidden');
-          statusElement.textContent = 'Server stats retrieved.';
-          const stats = [
-            `Daily Users: ${data.dailyUsers}`,
-            `Daily Connections: ${data.dailyConnections}`,
-            `All-Time Users: ${data.allTimeUsers}`,
-            `Active Rooms: ${data.activeRooms}`,
-            `Total Clients: ${data.totalClients}`
-          ];
-          stats.forEach(stat => {
-            const p = document.createElement('p');
-            p.textContent = stat;
-            statsDisplay.appendChild(p);
-          });
-        } else if (data.type === 'features') {
-          featuresContainer.classList.remove('hidden');
-          document.getElementById('toggleService').textContent = data.enableService ? 'On' : 'Off';
-          document.getElementById('toggleService').classList.toggle('off', !data.enableService);
-          document.getElementById('toggleImages').textContent = data.enableImages ? 'On' : 'Off';
-          document.getElementById('toggleImages').classList.toggle('off', !data.enableImages);
-          document.getElementById('toggleVoice').textContent = data.enableVoice ? 'On' : 'Off';
-          document.getElementById('toggleVoice').classList.toggle('off', !data.enableVoice);
-          if (!data.enableService) {
-            statusElement.textContent = 'Service is disabled. Toggle to re-enable.';
-          }
-        } else if (data.type === 'feature-toggled') {
-          const button = document.getElementById(`toggle${data.feature.charAt(0).toUpperCase() + data.feature.slice(1)}`);
-          button.textContent = data.enabled ? 'On' : 'Off';
-          button.classList.toggle('off', !data.enabled);
-          showStatusMessage(`Feature ${data.feature} toggled to ${data.enabled ? 'On' : 'Off'}`);
-          if (data.feature === 'service' && !data.enabled) {
-            statusElement.textContent = 'Service is disabled. Toggle to re-enable.';
-          } else if (data.feature === 'service' && data.enabled) {
-            statusElement.textContent = 'Server stats retrieved.';
-          }
-        } else if (data.type === 'features-update') {
-          document.getElementById('toggleService').textContent = data.enableService ? 'On' : 'Off';
-          document.getElementById('toggleService').classList.toggle('off', !data.enableService);
-          document.getElementById('toggleImages').textContent = data.enableImages ? 'On' : 'Off';
-          document.getElementById('toggleImages').classList.toggle('off', !data.enableImages);
-          document.getElementById('toggleVoice').textContent = data.enableVoice ? 'On' : 'Off';
-          document.getElementById('toggleVoice').classList.toggle('off', !data.enableVoice);
-          showStatusMessage(`Features updated: ${data.enableService ? 'Service enabled' : 'Service disabled'}`);
-          if (!data.enableService) {
-            statusElement.textContent = 'Service is disabled. Toggle to re-enable.';
-          }
-        } else if (data.type === 'error') {
-          // New: Ignore service disabled error for admins
-          if (data.message.includes('Service has been disabled by admin.')) {
-            statusElement.textContent = 'Service is disabled. Toggle to re-enable.';
-            return;
-          }
-          statsDisplay.innerHTML = '';
-          statsDisplay.classList.add('hidden');
-          featuresContainer.classList.add('hidden');
-          showStatusMessage(data.message || 'Error fetching stats. Please try again.');
-          console.error('Server error:', data.message);
-          if (data.message.includes('Invalid or expired token')) {
-            if (socket.readyState === WebSocket.OPEN) {
-              socket.send(JSON.stringify({ type: 'connect', clientId }));
-            }
-          } else if (data.message.includes('Invalid admin secret')) {
-            adminPasswordInput.value = '';
-            adminPasswordInput.focus();
-          } else if (data.message.includes('Token revoked')) {
-            showStatusMessage('Session expired. Reconnecting...');
-            token = '';
-            socket.close();
-          } else if (data.message.includes('Rate limit exceeded')) {
-            showStatusMessage('Rate limit exceeded. Retrying in 5 seconds...', 5000);
-            setTimeout(() => {
-              if (socket.readyState === WebSocket.OPEN && token) {
-                fetchStatsAndFeatures();
-              }
-            }, 5000);
-          }
-        }
-      } catch (error) {
-        console.error('Error parsing message:', error);
-        showStatusMessage('Error fetching stats. Please try again.');
-        statsDisplay.classList.add('hidden');
-        featuresContainer.classList.add('hidden');
+    ws.onmessage = (event) => {
+      const data = JSON.parse(event.data);
+      console.log('Received:', data);
+      if (data.type === 'stats') {
+        document.getElementById('stats').innerHTML = `
+          <h2>Stats</h2>
+          <p>Daily Users: ${data.dailyUsers}</p>
+          <p>Daily Connections: ${data.dailyConnections}</p>
+          <p>All-Time Users: ${data.allTimeUsers}</p>
+          <p>Active Rooms: ${data.activeRooms}</p>
+          <p>Total Clients: ${data.totalClients}</p>
+        `;
+      } else if (data.type === 'features') {
+        const featuresDiv = document.getElementById('features');
+        featuresDiv.innerHTML = '<h2>Features</h2>';
+        Object.keys(data).filter(key => key !== 'type').forEach(key => {
+          const button = document.createElement('button');
+          button.textContent = `${key}: ${data[key] ? 'Enabled' : 'Disabled'}`;
+          button.onclick = () => toggleFeature(key.replace('enable', '').toLowerCase());
+          featuresDiv.appendChild(button);
+        });
+      } else if (data.type === 'feature-toggled') {
+        document.getElementById('features').innerHTML = `<p>Feature ${data.feature} set to ${data.enabled ? 'enabled' : 'disabled'}</p>`;
+        getFeatures(); // Refresh features
+      } else if (data.type === 'error') {
+        alert(data.message);
       }
     };
-
-    socket.onerror = (error) => {
+    ws.onerror = (error) => {
       console.error('WebSocket error:', error);
-      showStatusMessage('Connection error. Reconnecting...');
-      statsDisplay.classList.add('hidden');
-      featuresContainer.classList.add('hidden');
+      alert('WebSocket error occurred.');
     };
-
-    socket.onclose = () => {
+    ws.onclose = () => {
       console.log('WebSocket closed');
-      showStatusMessage('Disconnected. Reconnecting...');
-      statsDisplay.classList.add('hidden');
-      featuresContainer.classList.add('hidden');
-      if (reconnectAttempts >= maxReconnectAttempts) {
-        showStatusMessage('Max reconnect attempts reached. Please refresh the page.', 10000);
+      alert('WebSocket connection closed.');
+    };
+    function getStats() {
+      const secret = document.getElementById('adminSecret').value;
+      const totp = document.getElementById('totpCode').value;
+      if (!secret || !totp) {
+        alert('Please enter both admin secret and TOTP code.');
         return;
       }
-      const delay = Math.min(30000, 5000 * Math.pow(2, reconnectAttempts));
-      reconnectAttempts++;
-      setTimeout(() => {
-        socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
-        socket.onopen = socket.onopen;
-        socket.onmessage = socket.onmessage;
-        socket.onerror = socket.onerror;
-        socket.onclose = socket.onclose;
-      }, delay);
-    };
-
-    submitButton.onclick = () => {
-      fetchStatsAndFeatures();
-    };
-
-    adminPasswordInput.addEventListener('keydown', (event) => {
-      if (event.key === 'Enter') {
-        event.preventDefault();
-        fetchStatsAndFeatures();
+      ws.send(JSON.stringify({ type: 'get-stats', secret, totp }));
+    }
+    function getFeatures() {
+      const secret = document.getElementById('adminSecret').value;
+      const totp = document.getElementById('totpCode').value;
+      if (!secret || !totp) {
+        alert('Please enter both admin secret and TOTP code.');
+        return;
       }
-    });
-
-    document.getElementById('toggleService').onclick = () => toggleFeature('service');
-    document.getElementById('toggleImages').onclick = () => toggleFeature('images');
-    document.getElementById('toggleVoice').onclick = () => toggleFeature('voice');
+      ws.send(JSON.stringify({ type: 'get-features', secret, totp }));
+    }
+    function toggleFeature(feature) {
+      const secret = document.getElementById('adminSecret').value;
+      const totp = document.getElementById('totpCode').value;
+      if (!secret || !totp) {
+        alert('Please enter both admin secret and TOTP code.');
+        return;
+      }
+      ws.send(JSON.stringify({ type: 'toggle-feature', feature, secret, totp }));
+    }
   </script>
 </body>
 </html>
